# nagioscore

./: .bash_history  .gitconfig  .gitignore  .travis.yml  .viminfo  .vimrc  CHANGELOG.md  CONTRIBUTING.md  Changelog  Changelog.md  Dockerfile  Dockerfile-centos7  INSTALLING  LEGAL  Makefile.2nd  Makefile.in  OutputTrap.pm  README  README.asciidoc  README.md  SECURITY.md  THANKS  UPGRADING  aclocal.m4  ax_nagios_get_distrib  ax_nagios_get_files  ax_nagios_get_inetd  ax_nagios_get_init  ax_nagios_get_paths  ax_nagios_get_ssl  cmd.sh  config.guess  config.sub  configure  configure.ac  configure.in  daemon-init.in  daemon-openrc.in  daemon-service.in  docker-compose-centos7-vim.yml  (+25 more)
.vim/: .netrwhist
autoconf-macros/: LICENSE  README.md  add_group_user  ax_nagios_get_distrib  ax_nagios_get_files  ax_nagios_get_inetd  ax_nagios_get_init  ax_nagios_get_os  ax_nagios_get_paths  ax_nagios_get_ssl
base/: .gitignore  Makefile.in  broker.c  broker.h  checks.c  commands.c  config.c  events.c  flapping.c  logging.c  nagios.c  nagios.h.in  nagiostats.c  nebmods.c  nerd.c  netutils.c  notifications.c  perfdata.c  perfdata.h  predict.c  predict.h  query-handler.c  sehandlers.c  sretention.c  sretention.h  utils.c  workers.c  wp-phash.c  wpres-phash.h  wpres.gperf
cgi/: .gitignore  Makefile.in  archivejson.c  archiveutils.c  auth.c  auth.h  avail.c  cgiauth.c  cgiauth.h  cgiutils.c  cgiutils.h.in  cmd.c  config.c  edata.c  edata.h  extcmd_list.c  extinfo.c  getcgi.c  getcgi.h  histogram.c  history.c  jsonutils.c  lifo.c  lifo.h  notifications.c  objectjson.c  outages.c  popen.c  popen.h  showlog.c  status.c  statusjson.c  statusmap.c  statuswml.c  statuswrl.c  summary.c  tac.c  trends.c
common/: Makefile.in  comments.c  comments.h  common.h  config.h.in  downtime.c  downtime.h  locations.h.in  macros.c  objects.c  objects.h  shared.c  skiplist.c  snprintf.c  statusdata.c  statusdata.h
contrib/: .gitignore  Makefile.in  README  convertcfg.c  daemonchk.c  epel-nagios.spec  epn_nagios.h  htaccess.sample  mini_epn.c  mini_epn.h  ministatus.c  nagios-qh.rb  nagios-worker.c  new_mini_epn.c  p1.pl  perlxsi.c  traceroute.cgi
debian/: changelog  control  rules
docker/: Dockerfile  Dockerfile-centos7  docker-compose-centos7.yml  docker-compose.yml  exec.bat  exec.sh  install.sh  plugins.docker  plugins.sh  supervisord.conf
docs/: api-incompat3to4.dox  config-incompat3to4.dox  mainpage.dox  queryhandlers.dox  workers.dox
html/: .gitignore  Makefile.in  config.inc.php  config.inc.php.in  graph-header.html  histogram-form.html  histogram-graph.html  histogram-links.html  histogram.html  index.html.in  index.php  index.php.in  infobox.html  jsonquery.html  login.html  main.html  main.php  map-directive.html  map-form.html  map-links.html  map-popup.html  map.html  map.php  quicklinks.php  rss-corebanner.php  rss-corefeed.html  rss-corefeed.php  rss-newsfeed.html  rss-newsfeed.php  rss.php  side.html.in  side.php  side.php.in  trends-form.html  trends-graph.html  trends-host-yaxis.html  trends-links.html  trends-service-yaxis.html  trends.html
include/: .gitignore  Makefile  Makefile.in  archivejson.h  archiveutils.h  broker.h  cgiauth.h  cgiutils.h  cgiutils.h.in  comments.h  common.h  compat.h  config.h.in  config_pwd.h  defaults.h  downtime.h  epn_nagios.h  getcgi.h  ignored_config.h.in  jsonutils.h  locations.h.in  logging.h  macros.h  nagios.h  nagios.h.in  nebcallbacks.h  neberrors.h  nebmods.h  nebmodules.h  nebstructs.h  netutils.h  objectjson.h  objects.h  perfdata.h  shared.h  skiplist.h  snprintf.h.in  sretention.h  statusdata.h  statusjson.h  (+1 more)
lib/: .gitignore  Makefile.in  bitmap.c  bitmap.h  dictionary.c  dictionary.h  dkhash.c  dkhash.h  fanout.c  fanout.h  iobroker.c  iobroker.h  iobroker.h.in  iocache.c  iocache.h  kvvec.c  kvvec.h  libnagios.h  lnag-utils.h  nsock.c  nsock.h  nspath.c  nspath.h  nsutils.c  nsutils.h  nwrite.h  pqueue.c  pqueue.h  prqueue.c  prqueue.h  runcmd.c  runcmd.h  signal_handler.c  signal_handler.h  skiplist.c  skiplist.h  snprintf.c  snprintf.h.in  squeue.c  squeue.h  (+16 more)
module/: Makefile.in  helloworld.c
sample-config/: .gitignore  README  cgi.cfg.in  httpd.conf.in  mrtg.cfg.in  nagios.cfg.in  resource.cfg.in
startup/: .gitignore  default-init.in  default-service.in  openrc-init.in  upstart-init.in
t-tap/: .gitignore  Makefile.in  colorize.sh  stub_broker.c  stub_checks.c  stub_commands.c  stub_comments.c  stub_downtime.c  stub_events.c  stub_flapping.c  stub_iobroker.c  stub_logging.c  stub_macros.c  stub_nebmods.c  stub_netutils.c  stub_notifications.c  stub_nsock.c  stub_objects.c  stub_perfdata.c  stub_sehandlers.c  stub_shared.c  stub_sretention.c  stub_statusdata.c  stub_utils.c  stub_workers.c  stub_xdddefault.c  stub_xodtemplate.c  test-stubs.c  test_checks.c  test_commands.c  test_downtime.c  test_each.t  test_events.c  (+8 more)
tap/: INSTALL  Makefile.am  Makefile.in  README  README.nagios  aclocal.m4  compile  config.guess  config.sub  configure  configure.in  depcomp  ltmain.sh  missing  test-driver
tap/src/: Makefile.am  Makefile.in  tap.3  tap.c  tap.h
tap/tests/: Makefile.am  Makefile.in  README
tap/tests/diag/: Makefile.in  test.c  test.pl
tap/tests/fail/: Makefile.in  test.c  test.pl
tap/tests/ok/: Makefile.am  Makefile.in
tap/tests/ok/ok/: Makefile.in  test.c  test.pl
tap/tests/ok/ok-hash/: Makefile.in  test.c  test.pl
tap/tests/ok/ok-numeric/: Makefile.in  test.c  test.pl
tap/tests/pass/: Makefile.am  Makefile.in  test.c  test.pl
tap/tests/plan/: Makefile.am  Makefile.in
tap/tests/plan/no-tests/: Makefile.in  test.c  test.pl
tap/tests/plan/no_plan/: Makefile.in  test.c  test.pl
tap/tests/plan/not-enough-tests/: Makefile.am  Makefile.in  test.c  test.pl
tap/tests/plan/sane/: Makefile.in  test.c  test.pl  test.t
tap/tests/plan/skip_all/: Makefile.in  test.c  test.pl
tap/tests/plan/too-many-plans/: Makefile.in  test.c  test.pl  test.t
tap/tests/plan/too-many-tests/: Makefile.in  test.c  test.pl
tap/tests/skip/: Makefile.in  test.c  test.pl
tap/tests/todo/: Makefile.in  test.c  test.pl  test.t
(+383 files in other folders)
